# DataAnnotationTools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  teamscale_plugin_mappings.properties
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/app/: CMakeLists.txt  LaneDetector.cpp  Watersheder.cpp
cpp/glad/include/glad/: glad.h
cpp/glad/src/: glad.c
cpp/include/DataAnnotationTools/: Algorithm.hpp  CommandLineParser.hpp  Gui.hpp  ProgramOptions.hpp
cpp/include/DataAnnotationTools/lane_detection/: LaneDetection.hpp
cpp/include/DataAnnotationTools/utils/: CommandLineParser.hpp
cpp/include/DataAnnotationTools/watershed/: CommandLineParser.hpp  Formatter.hpp  Watersheder.hpp
cpp/lib/: CMakeLists.txt  Formatter.cpp  Formatter.hpp  ProgramOptions.cpp  ProgramOptions.hpp  Shader.h  Watersheder.cpp  Watersheder.hpp  shader.vert
cpp/misc/: CMakeLists.txt
cpp/run/: CMakeLists.txt  LearnOpenGL.cpp  VisualizeWatersheder.cpp
cpp/src/: Algorithm.cpp  CMakeLists.txt  CommandLineParser.cpp  Gui.cpp  ProgramOptions.cpp  kdtree.cpp
cpp/src/lane_detection/: LaneDetection.cpp
cpp/src/utils/: CommandLineParser.cpp
cpp/src/watershed/: CommandLineParser.cpp  Formatter.cpp  Watersheder.cpp
cpp/standalone/: CMakeLists.txt  Watersheder.cpp
cpp/test/: CMakeLists.txt  CommandLineParserTests.cpp  ProgramOptionsTests.cpp
